added an images folder, and added better descriptions to index and projects

--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
     </div>
     <div>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dictum ac nibh quis mollis. Fusce congue urna nec consectetur imperdiet. Nulla ligula nisl, porta nec gravida sit amet, aliquet et leo. Phasellus consequat mollis felis quis vehicula. Nullam vel augue nisi. Nunc bibendum sapien vitae sapien vulputate, in molestie justo luctus. Vivamus tincidunt at orci eget consectetur. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-  
-        Cras euismod quam at dignissim eleifend. Etiam malesuada eu eros et dictum. Fusce nisi arcu, finibus non augue ut, malesuada laoreet nunc. Etiam nec lacus nec diam bibendum vehicula a vitae turpis. Vestibulum magna enim, lacinia vel tristique nec, varius ut nunc. Vestibulum eget sapien et mi euismod laoreet. Nullam in quam nulla. Donec volutpat luctus porta. Curabitur sodales tellus non mi sagittis, et ornare eros fringilla. Morbi aliquam viverra turpis, quis dapibus orci mollis non. Vivamus ut dui et diam accumsan placerat. Nam a diam ut odio tincidunt suscipit sit amet eget orci. Curabitur at facilisis urna, id ultricies ipsum. Nullam eu magna bibendum, tristique urna vitae, pulvinar lorem. Ut sollicitudin imperdiet tellus at lacinia. Integer posuere libero massa, at posuere diam laoreet et.
+        I am a game designer who also has confident skills in game coding, and is eager to tackle dynamic challenges and apply creativity 
+        to craft entertaining player experiences. I have proficiency in project management, user-centric problem-solving, 
+        and seamless collaboration across teams as well as independently. I have experience in several game development processes,
+        such as design, development, and 3D modeling, as well as other fields, like web and software development. 
+        You can navigate to other pages using the links at the top, such as my works page, where you can view some of my projects!
       </p>
     </div>
   </div>
