--- a/projects.html
+++ b/projects.html
@@ -22,3 +22,24 @@
       background-color: lightblue;
     }
 </style>
+
+<div class="center-container">
+    <div style="padding: 30px;">
+      <h1 style="text-align: center;">Sophia Hatheway</h1>
+      <h2 style="text-align: center;">Game Designer & Developer</h2>
+    </div>
+  </div>
+
+   <div class="" style="text-align: center;">
+    <div>
+      <h3>
+        My Works
+      </h3>
+    </div>
+    <div>
+      <p>
+        Below are some of my projects, and you can navigate to other pages using the links at the top.
+      </p>
+    </div>
+  </div>
+
