--- a/contact.html
+++ b/contact.html
@@ -1,124 +1,79 @@
-<head> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
 
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="main_style.css" />
+  <link rel="stylesheet" href="contact_style.css" />
+
+  <title>Contact</title>
 </head>
 
-<style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-  
-    body {
-      margin: 0;
-      background-color: #2F2D59;
-    }
-    .center-container {
-      display: flex;
-      justify-content: center;
-      /* horizontal */
-      /*align-items: center; vertical */
-      width: 100%;
-      /* full viewport height */
-      background-color: #5A55AA;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-    }
-  
-    .main-buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      width: 100%;
-      padding: 30px;
-      gap: 5%;
-      max-width: 100%;
-      box-sizing: border-box;
-    }
-  
-    .contact-container {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: column;
-      justify-content: center;
-      padding-left: 2%;
-      padding-right: 2%;
-      margin-left: 5%;
-      margin-right: 5%;
-      background-color: #5A55AA;
-      max-width: 100%;
-      box-sizing: border-box;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-      border-radius: 8px;
-    }
-  
-    .main-buttons button {
-      flex: 1 1 150px;
-      /* grow, shrink, base width */
-      max-width: 150px;
-    }
-</style>
+<body>
 
-<div class="center-container">
-    <div style="padding: 30px;">
-      <h1 style="text-align: center;">Sophia Hatheway</h1>
-      <h2 style="text-align: center;">Game Designer & Developer</h2>
+  <div class="background">
+    <div class="content">
+      <div class="header">
+        <div class="header-content">
+          <div class="title-logo">
+            <h1>Sophia Hatheway</h1>
+            <h2>Game Designer & Developer</h2>
+          </div>
+          <div class="nav-bar">
+            <a href="home.html">Home</a>
+            <a href="###">My Works</a>
+            <a href="about.html">About Me</a>
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+      <div class="main-content">
+        <h3><strong>How to Contact Me</strong></h3>
+        <p class="contact-intro">
+          I have several methods of contact available! Email is often the best way to reach me for
+          professional inquiries, collaborations, or questions regarding my work.
+        </p>
+        <ul class="contact-list">
+          <li><strong style="font-family: 'Poiret One', sans-serif;">Email:</strong> shatheway.dev@gmail.com</li>
+          <li><strong style="font-family: 'Poiret One', sans-serif;">LinkedIn:</strong> <a
+              href="https://www.linkedin.com/in/sophia-hatheway-28261a383/">linkedin.com/in/sophia-hatheway-28261a383/</a>
+          </li>
+          <li><strong style="font-family: 'Poiret One', sans-serif;">GitHub:</strong> <a
+              href="https://github.com/shathewaydev-design">shathewaydev-design</a></li>
+          <li><strong style="font-family: 'Poiret One', sans-serif;">Discord:</strong> shatheway</li>
+          <li><strong style="font-family: 'Poiret One', sans-serif;">itch.io:</strong> <a
+              href="https://shathewaydevdesign.itch.io">shathewaydevdesign.itch.io</a></li>
+        </ul>
+
+      </div>
+
+      <div class="footer">
+
+      </div>
+
     </div>
+
+
+
+
   </div>
 
-   <div class="main-buttons">
-  <div style="padding: 10px;">
-    <a href="index.html">
-      <button>
-        Home
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="projects.html">
-      <button>
-        My Works
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="about.html">
-      <button>
-        About Me
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="contact.html">
-      <button>
-        Contact Me
-      </button>
-    </a>
-  </div>
-</div>
 
-   <div class="contact-container" style="text-align: center;">
-    <div>
-      <h3>
-        Contact Me
-      </h3>
-    </div>
-    <div>
-      <p>
-        contact info here!!! (clean up later)
-        Email: shatheway.dev@gmail.com
-        LinkedIn: https://www.linkedin.com/in/sophia-hatheway-28261a383/
-        Githhub: shathewaydev-design
-        Discord: shatheway
-        itch.io: https://shathewaydevdesign.itch.io
-      </p>
-    </div>
-  </div>
 
+</body>
+
+</html>
