--- a/index.html
+++ b/index.html
@@ -1,127 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="main_style.css" />
+
+    <title>Home</title>
 </head>
 
-<style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+<body>
 
-  body {
-    margin: 0;
-    background-color: #2F2D59;
-  }
+    <div class="background">
+        <div class="content">
+            <div class="header">
+                <div class="header-content">
+                    <div class="title-logo">
+                        <h1>Sophia Hatheway</h1>
+                        <h2>Game Designer & Developer</h2>
+                    </div>
+                    <div class="nav-bar">
+                        <a href="###">My Works</a>
+                        <a>About Me</a>
+                        <a href="contact.html">Contact Me</a>
+                    </div>
 
-  .center-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    /* full viewport height */
-    background-color: #5A55AA;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  }
+                </div>
 
-  .main-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-    padding: 30px;
-    gap: 5%;
-    max-width: 100%;
-    box-sizing: border-box;
-  }
+ 
 
-  .home-info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-left: 2%;
-    padding-right: 2%;
-    margin-left: 5%;
-    margin-right: 5%;
-    background-color: #5A55AA;
-    max-width: 100%;
-    box-sizing: border-box;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-    border-radius: 8px;
-  }
+            </div>
 
-  .main-buttons button {
-    flex: 1 1 150px;
-    /* grow, shrink, base width */
-    max-width: 150px;
-  }
-</style>
+            <div class="main-content">
+                <h3><strong>Welcome to My Portfolio Site!</strong></h3>
+                <p class="home-intro">
+                    I am a game designer who also has confident skills in game coding, and is eager to tackle dynamic
+                    challenges and
+                    apply creativity
+                    to craft entertaining player experiences. I have proficiency in project management, user-centric
+                    problem-solving,
+                    and seamless collaboration across teams as well as independently. I have experience in several game
+                    development
+                    processes,
+                    such as design, development, and 3D modeling, as well as other fields, like web and software
+                    development.
+                    You can navigate to other pages using the links at the top, such as my works page, where you can
+                    view my
+                    projects!
+                </p>
 
-<div class="center-container">
-  <div style="padding: 30px;">
-    <h1 style="text-align: center;">Sophia Hatheway</h1>
-    <h2 style="text-align: center;">Game Designer & Developer</h2>
-  </div>
-</div>
+            </div>
 
-<div class="main-buttons">
-  <div style="padding: 10px;">
-    <a href="index.html">
-      <button>
-        Home
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="projects.html">
-      <button>
-        My Works
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="about.html">
-      <button>
-        About Me
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="contact.html">
-      <button>
-        Contact Me
-      </button>
-    </a>
-  </div>
-</div>
+            <div class="footer">
 
-<div class="home-info" style="text-align: center;">
-  <div>
-    <h3>
-      Welcome to My Portfolio Site!
-    </h3>
-  </div>
-  <div>
-    <p>
-      I am a game designer who also has confident skills in game coding, and is eager to tackle dynamic challenges and
-      apply creativity
-      to craft entertaining player experiences. I have proficiency in project management, user-centric problem-solving,
-      and seamless collaboration across teams as well as independently. I have experience in several game development
-      processes,
-      such as design, development, and 3D modeling, as well as other fields, like web and software development.
-      You can navigate to other pages using the links at the top, such as my works page, where you can view some of my
-      projects!
-    </p>
-  </div>
-</div>
+            </div>
+
+        </div>
+
+
+
+
+    </div>
+
+
+
+</body>
+
+</html>
